--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #fbff07;
+    background-color: #46cee6;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -18,6 +18,9 @@ h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
 
+.titulo{
+    text-decoration: solid;
+}
 .date {
     color: #828282;
 }
